--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
   		<groupId>org.apache.httpcomponents</groupId>
   		<artifactId>httpclient</artifactId>
   		<version>4.5.2</version>
+  		<exclusions>
+  			<exclusion>
+	  			<artifactId>commons-logging</artifactId>
+  				<groupId>commons-logging</groupId>
+  			</exclusion>
+  		</exclusions>
   	</dependency>
   	<dependency>
   		<groupId>com.fasterxml.jackson.core</groupId>
@@ -41,6 +47,18 @@
   		<groupId>com.fasterxml.jackson.datatype</groupId>
   		<artifactId>jackson-datatype-jsr310</artifactId>
   		<version>2.8.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-classic</artifactId>
+  		<version>1.1.7</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>jcl-over-slf4j</artifactId>
+  		<version>1.7.21</version>
+  		<scope>test</scope>
   	</dependency>
   </dependencies>
 </project>
