--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>Discogs API Client</name>
   <description>Java client for the discogs.com API</description>
+
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
   <dependencies>
   	<dependency>
   		<groupId>com.fasterxml.jackson.core</groupId>
